--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -1,8 +1,7 @@
 <div class=" bg-color">
-  <!-- <div class="w-100 img-fondo">
+  <div class="w-100 img-fondo"></div>
    
-  </div> -->
-  <!-- <hr> -->
+  
   <div class="padding-main py-4 px-3">
     <div class="row d-flex">
         <section id="productos ">
