--- a/src/app/detalle-beneficios/detalle-beneficios.component.html
+++ b/src/app/detalle-beneficios/detalle-beneficios.component.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="row p-0 mx-0">
     <div class="mb-4 px-5">
       <div class="w-100 banda-sup">
@@ -28,3 +29,4 @@
       </a>
     </div>
   </div>
+</div>
